Add Library activity
Added library activity and updated layout

Cleanup errors from java classes

--- a/Colecocollector/app/src/main/res/values/strings.xml
+++ b/Colecocollector/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     </string>
     <string name="add_game">Add Game</string>
     <string name="my_collection">My Collection</string>
+    <string name="full_library">Full Library</string>
 </resources>
